--- a/app/src/main/res/layout/activity_engine_service.xml
+++ b/app/src/main/res/layout/activity_engine_service.xml
@@ -30,14 +30,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/air_repair"
+                android:id="@+id/engine_service"
                 android:layout_width="0dp"
                 android:paddingTop="20dp"
                 android:layout_height="70dp"
                 android:layout_weight="40"
                 android:textSize="21dp"
                 android:paddingLeft="5dp"
-                android:text="Air Conditioner Repair "
+                android:text="Engine Service "
                 android:typeface="serif"
                 android:textColor="#ffffff"/>
 
@@ -58,14 +58,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/cooling_system"
+                android:id="@+id/engine_repair"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="40"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:paddingTop="10dp"
-                android:text="Cooling System Diagnostics"
+                android:text="Engine Repair"
                 android:textColor="#ffffff"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -88,14 +88,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/auto_aircond"
+                android:id="@+id/engine_replacement"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="40"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:paddingTop="20dp"
-                android:text="Auto Air Conditioning Repair"
+                android:text="Engine Replacement"
                 android:textColor="#ffffff"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -117,14 +117,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/heating_system"
+            android:id="@+id/engine_performance"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="40"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="10dp"
-            android:text="Heating System Repair"
+            android:text="Engine Performance Check"
             android:textColor="#ffffff"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -146,14 +146,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/belt_repair"
+            android:id="@+id/belt_replacement"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="40"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="10dp"
-            android:text="Belt Repair "
+            android:text="Belt Replacement"
             android:textColor="#ffffff"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -175,14 +175,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/compressor_reapir"
+            android:id="@+id/hose_replacement"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="40"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="20dp"
-            android:text="Compressor Repair"
+            android:text="Hose Replacement"
             android:textColor="#ffffff"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -204,14 +204,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/refigerant_replacement"
+            android:id="@+id/water_repair"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="40"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="20dp"
-            android:text="Refigerant Replacement"
+            android:text="Water Pump Repair"
             android:textColor="#ffffff"
             android:textSize="21dp"
             android:typeface="serif" />
@@ -234,14 +234,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/auto_air"
+                android:id="@+id/fuel_injection"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="40"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:paddingTop="20dp"
-                android:text="Auto Air Conditioning"
+                android:text="Fuel Injection Service "
                 android:textColor="#ffffff"
                 android:textSize="21dp"
                 android:typeface="serif" />
@@ -264,14 +264,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/heating_repair"
+                android:id="@+id/fuel_system"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="40"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:paddingTop="10dp"
-                android:text="Heating System Repair and Service "
+                android:text="Fuel System Maintenance"
                 android:textColor="#ffffff"
                 android:textSize="21dp"
                 android:typeface="serif" />
